--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "@nestjs/platform-express": "^7.6.15",
     "@nestjs/typeorm": "^8.0.1",
     "dotenv": "^10.0.0",
+    "express-session": "^1.17.2",
+    "ioredis": "^4.27.6",
     "mysql2": "^2.2.5",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
@@ -36,13 +38,15 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
-    "typeorm": "^0.2.34"
+    "typeorm": "^0.2.34",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@nestjs/cli": "^7.6.0",
     "@nestjs/schematics": "^7.3.0",
     "@nestjs/testing": "^7.6.15",
     "@types/express": "^4.17.11",
+    "@types/express-session": "^1.17.4",
     "@types/jest": "^26.0.22",
     "@types/node": "^14.14.36",
     "@types/passport-jwt": "^3.0.5",
